syntax = "proto3";
package xsuportal.proto.resources;
option go_package = "github.com/isucon/isucon10-final/benchmarker/proto/xsuportal/resources";

import "xsuportal/resources/benchmark_result.proto";
import "xsuportal/resources/contestant_instance.proto";
import "xsuportal/resources/team.proto";

import "google/protobuf/timestamp.proto";

message BenchmarkJob {
  int64 id = 1;
  int64 team_id = 2;
  // int64 target_id = 3;
  Status status = 4;
  enum Status {
    PENDING = 0;
    SENT = 1;
    RUNNING = 2;
    ERRORED = 3;
    CANCELLED = 4;
    FINISHED = 5;
  }

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp started_at = 7;
  google.protobuf.Timestamp finished_at = 8;

  // int64 score = 9;
  // // instance_name is not available for contestant
  // string instance_name = 10;

  Team team = 16;
  // target & result are only available at GetBenchmarkJobResponse
  // ContestantInstance target = 17;
  BenchmarkResult result = 18;

  string target_hostname = 30;
}
